make apache multiviews recognize .php files so that ex. /seats resolves to /seats.php

--- a/br7portal.conf
+++ b/br7portal.conf
@@ -8,6 +8,7 @@
 	</Directory>
 	<Directory /home/mohammedc/dev/brtms/>
 		Options Indexes FollowSymLinks MultiViews
+		AddType application/x-httpd-php .php
 		AllowOverride All
 		Order allow,deny
 		allow from all
