Updated .htaccess to forbid web access to the .git directory.

--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,5 @@ Options +MultiViews
 RewriteEngine On
 
 RewriteRule ^tournament/(.+)$ single_tournament?tourid=$1 [L]
+RewriteRule ^(/?).git/ - [F,L]
 
